--- a/examples/examples.html
+++ b/examples/examples.html
@@ -8,6 +8,8 @@
    </head>
    <body>
       <noscript>Javascript is deactivated in your browser. Please activate it in order to use this page.</noscript>
+      <!-- The JSON library is included only for testing on very old browsers. -->
+      <script src="https://cdn.jsdelivr.net/gh/douglascrockford/JSON-js@aef828bfcd7d5efaa41270f831f8d27d5eef3845/json2.min.js"></script>
       <script src="../gotoB.min.js"></script>
       <script src="examples.js"></script>
    </body>
