More tutorial, part 2.

--- a/tutorial/2-5.app.html
+++ b/tutorial/2-5.app.html
@@ -3,12 +3,12 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
-      <title>Tutorial - gotoв</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
    </head>
    <body>
-      <noscript>Javascript is deactivated in your browser. Please activate it in order to use this page.</noscript>
-      <script src="../gotoB.min.js"></script>
-      <script src="tutorial.js"></script>
+      <h1>Counter</h1>
+      <p>Counter is 0</p>
+      <button onclick="increaseCounter ()">Increase counter</button>
+      <script src="2-5.app.js"></script>
    </body>
 </html>
